[gd_scene load_steps=2 format=3 uid="uid://ts27uf4pesyh"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_y64i8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y64i8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -56.5
offset_right = 37.5
offset_bottom = 56.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
initial_position = 1
size = Vector2i(122, 100)
dialog_text = "apakah quit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
